linux/project/k8s/mail.yml
# deployment definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
      - name: mail-service
        image: 'tsizism/mail-service:1.0'
        ports: 
          - containerPort: 80
        env:
          - name: MAIL_PORT
            value: "1025"
          - name: MAIL_DOMAIN
            value: "localhost"
          - name: MAIL_HOST
            value: "mailhog"
          - name: MAIL_ENCRYPTION
            value: "none"
          - name: MAIL_USERNAME
            value: ""
          - name: MAIL_PASSWORD
            value: ""
          - name: MAIL_FROMNAME
            value: "John Smith"
          - name: MAIL_FROMADDR
            value: "JohnSmith@example.com"
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"


---

apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
  - protocol: TCP
    name: main-port
    port: 80
    targetPort: 80
