linux/project/k8s/mongodb.yml
# deployment definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: "mongo:6.0-rc-jammy"
        env:
          - name: MONGO_INITDB_DATABASE
            value : trace
          - name: MONGO_INITDB_ROOT_USERNAME 
            value : admin          
          - name: MONGO_INITDB_ROOT_PASSWORD 
            value : password
        ports: 
          - containerPort: 27017
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    name: main-port
    port: 27017
    targetPort: 27017
  type: LoadBalancer
