linux/project/k8s/trace.yml
# deployment definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-service
spec:
  selector:
    matchLabels:
      app: trace-service
  template:
    metadata:
      labels:
        app: trace-service
    spec:
      containers:
      - name: trace-service
        image: 'tsizism/trace-service:1.0'
        ports: 
        - containerPort: 80
        - containerPort: 5001
        - containerPort: 50001       
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"

---

apiVersion: v1
kind: Service
metadata:
  name: trace-service
spec:
  selector:
    app: trace-service
  ports:
  - protocol: TCP
    name: web-port
    port: 80
    targetPort: 80
  - protocol: TCP
    name: rpc-port
    port: 5001
    targetPort: 5001
  - protocol: TCP
    name: grpc-port
    port: 50001
    targetPort: 50001
